@@ -90,6 +90,8 @@ DRLM Version 2.4.0 (February 2021) - Release Notes
  
   * List Unscheduled clients bug fixed
 
+  * Removed unsupported SysVinit service management
+
 
 DRLM Version 2.3.2 (December 2020) - Release Notes
 --------------------------------------------------
