@@ -104,7 +104,6 @@ exportfs
 qemu-img
 qemu-nbd
 ls
-mkfs.ext2
 mkfs.ext4
 mktemp
 openssl
